--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -216,10 +216,10 @@ angal.billbrowser.pleaseselectareport.msg                                       
 angal.billbrowser.pleaseselectonlyonebill.msg                                                          = Please select only one bill.
 angal.billbrowser.receipt.btn                                                                          = Receipt
 angal.billbrowser.receipt.btn.key                                                                      = P
+angal.billbrowser.removeapatient.tooltip                                                               = Remove a patient.
 angal.billbrowser.report                                                                               = Report
 angal.billbrowser.report.btn                                                                           = Report
 angal.billbrowser.report.btn.key                                                                       = R
-angal.billbrowser.removeapatient.tooltip                                                               = Remove a patient.
 angal.billbrowser.selectapatient.tooltip                                                               = Select a patient.
 angal.billbrowser.shortreportonlybaddebt.txt                                                           = Short Report (only BadDebt bills)
 angal.billbrowser.thebilldeleted.msg                                                                   = The bill is deleted.
@@ -530,20 +530,20 @@ angal.groupsbrowser.title                                                       
 angal.help.pdfviewernotfound                                                                           = PDF Viewer not found.\nThe User's Guide is located in the Documents folder.
 angal.help.pdfviewernotfoundoruserguidenotfound                                                        = PDF Viewer not found or User Guide not found in the Documents folder
 angal.help.userguidenotfound                                                                           = User Guide not found in the Documents folder
+angal.hopsital.thehospitalnamecannotbeblank.msg                                                        = The hospital name cannot be blank.
 angal.hospital                                                                                         = Open Hospital
 angal.hospital.currencycod                                                                             = Currency Code
 angal.hospital.emailaddress                                                                            = Email address
 angal.hospital.faxnumber                                                                               = Fax number
 angal.hospital.hospitalinformation.title                                                               = Hospital Information
 angal.hospital.savethechanges.msg                                                                      = Save the changes?
-angal.hospital.visitduration.txt                                                                       = Visit duration
-angal.hospital.visitendhour.txt                                                                        = Visit end hour
-angal.hospital.visitstarthour.txt                                                                      = Visit start hour
-angal.hopsital.thehospitalnamecannotbeblank.msg                                                        = The hospital name cannot be blank.
 angal.hospital.thestartofvisitinghoursislaterthantheendhour.msg                                        = The start of the visiting hours is after the end hour.
 angal.hospital.thevisitdurationcannotbeblank.msg                                                       = The visit duration cannot be blank.
 angal.hospital.thevisitdurationmustbepositiveandlessthanthelengthofthevisitinghours.msg                = The visit duration must be postive and less than the length of the visiting hours.
 angal.hospital.thevisitinghourvaluesmustbeintherange0to24.msg                                          = The visiting hour values must be in the range of 0 to 24.
+angal.hospital.visitduration.txt                                                                       = Visit duration
+angal.hospital.visitendhour.txt                                                                        = Visit end hour
+angal.hospital.visitstarthour.txt                                                                      = Visit start hour
 angal.lab.allnegative.txt                                                                              = All negative.
 angal.lab.blood.txt                                                                                    = Blood
 angal.lab.cfs.txt                                                                                      = CFS
@@ -900,8 +900,8 @@ angal.menu.btn.newbill                                                          
 angal.menu.btn.opd                                                                                     = OPD
 angal.menu.btn.opdchart                                                                                = OPD Chart
 angal.menu.btn.operation                                                                               = Operation
-angal.menu.btn.operationtype                                                                           = Operation Type
 angal.menu.btn.operationlist                                                                           = Operation List
+angal.menu.btn.operationtype                                                                           = Operation Type
 angal.menu.btn.otherprices                                                                             = Other Prices
 angal.menu.btn.patientvaccine                                                                          = Vaccines
 angal.menu.btn.patreport                                                                               = Launch Report 
@@ -912,7 +912,7 @@ angal.menu.btn.printing                                                         
 angal.menu.btn.smsmanager                                                                              = SMS Manager
 angal.menu.btn.statistics                                                                              = Statistics
 angal.menu.btn.supplier                                                                                = Supplier
-angal.menu.btn.telemetry																			   = Telemetry
+angal.menu.btn.telemetry                                                                               = Telemetry
 angal.menu.btn.types                                                                                   = Types
 angal.menu.btn.users                                                                                   = Users & Groups
 angal.menu.btn.usersusers                                                                              = Users
@@ -966,14 +966,6 @@ angal.menu.printing                                                             
 angal.menu.smsmanager                                                                                  = SMS Manager
 angal.menu.statistics                                                                                  = Statistics
 angal.menu.supplier                                                                                    = Supplier
-angal.telemetry.title                                                                             	   = Help us improve Open Hospital
-angal.telemetry.about																				   = Collect anonymous usage data and send them to informaticisenzafrontiere.org
-angal.telemetry.info																				   = Open Hospital is the first of a set of software products that Informatici Senza Frontiere has developed to support the information management and the activities of hospitals and health centers in the simplest manner possible, by providing tools for the hospital administrative operations (like registering patients, manage laboratory analysis and pharmaceutical stocks) and to produce detailed statistics and reports.
-angal.telemetry.body																				   = Please choose what you want to share (and what not) with our organization:
-angal.telemetry.confirmation.dialog.message															   = Are you sure that you want to send these informations?
-angal.telemetry.button.label.confirm																   = Confirm
-angal.telemetry.button.label.ask.later																   = Ask me later 
-angal.telemetry.button.label.ask.never																   = Disable and never ask again 
 angal.menu.telemetry                                                                                   = Telemetry
 angal.menu.types                                                                                       = Types
 angal.menu.users                                                                                       = Users
@@ -1433,6 +1425,14 @@ angal.supplier.requiredfields                                                   
 angal.supplier.suppliersbrowser.title                                                                  = Supplier Browser
 angal.supplier.taxcode                                                                                 = Tax Number ID
 angal.supplier.taxcode.col                                                                             = Tax Number ID
+angal.telemetry.about                                                                                  = Collect anonymous usage data and send them to informaticisenzafrontiere.org
+angal.telemetry.body                                                                                   = Please choose what you want to share (and what not) with our organization:
+angal.telemetry.button.label.ask.later                                                                 = Ask me later 
+angal.telemetry.button.label.ask.never                                                                 = Disable and never ask again 
+angal.telemetry.button.label.confirm                                                                   = Confirm
+angal.telemetry.confirmation.dialog.message                                                            = Are you sure that you want to send these information?
+angal.telemetry.info                                                                                   = Open Hospital is the first of a set of software products that Informatici Senza Frontiere has developed to support the information management and the activities of hospitals and health centers in the simplest manner possible, by providing tools for the hospital administrative operations (like registering patients, manage laboratory analysis and pharmaceutical stocks) and to produce detailed statistics and reports.
+angal.telemetry.title                                                                                  = Help us improve Open Hospital
 angal.therapy.actions                                                                                  = Actions
 angal.therapy.addtherapy.btn                                                                           = Add Therapy
 angal.therapy.addtherapy.btn.key                                                                       = A
@@ -1506,12 +1506,12 @@ angal.userbrowser.edituser.title                                                
 angal.userbrowser.group.label                                                                          = Group:
 angal.userbrowser.name.label                                                                           = Name:
 angal.userbrowser.password.label                                                                       = Password:
-angal.userbrowser.passwordmustbeatleast6characters.msg                                                 = Password must be at least 6 characters; please retry.
-angal.userbrowser.passwordsmustcontainatleastonealphabeticnumericandspecialcharacter.msg               = Password must contain at least one alphabetic, numeric, and special character.
 angal.userbrowser.passwordistoolongmaximumof72characters.msg                                           = Password is too long; maximum of 72 characters.
+angal.userbrowser.passwordmustbeatleast6characters.msg                                                 = Password must be at least 6 characters; please retry.
 angal.userbrowser.passwordmustbeatleastncharacters.fmt.msg                                             = Password must be at least {0} characters; please retry.
 angal.userbrowser.passwordsdonotmatchpleasecorrect.msg                                                 = Passwords do not match; please correct.
 angal.userbrowser.passwordsdonotmatchpleaseretry.msg                                                   = Passwords do not match; please retry.
+angal.userbrowser.passwordsmustcontainatleastonealphabeticnumericandspecialcharacter.msg               = Password must contain at least one alphabetic, numeric, and special character.
 angal.userbrowser.pleaseprovideapassword.msg                                                           = Please provide a password.
 angal.userbrowser.pleaseprovideavalidusername.msg                                                      = Please provide a valid user name.
 angal.userbrowser.pleaseprovidetheretypepassword.msg                                                   = Please provide the 'retype' password.
@@ -1582,8 +1582,8 @@ angal.ward.femaleward                                                           
 angal.ward.haspharmacy.col                                                                             = Has Pharmacy
 angal.ward.insertavalidbedsnumber                                                                      = Insert a valid beds number.
 angal.ward.insertavaliddoctorsnumber                                                                   = Insert a valid doctors number.
-angal.ward.insertavalidnursesnumber                                                                    = Insert a valid nurses number.
 angal.ward.insertavaliddurationvalue.msg                                                               = Insert a valid visit duration value.
+angal.ward.insertavalidnursesnumber                                                                    = Insert a valid nurses number.
 angal.ward.maleward                                                                                    = Male Ward
 angal.ward.maternity.txt                                                                               = Maternity
 angal.ward.nameedit                                                                                    = Name *
