--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1430,7 +1430,7 @@ angal.telemetry.body                                                            
 angal.telemetry.button.label.ask.later                                                                 = Ask me later 
 angal.telemetry.button.label.ask.never                                                                 = Disable and never ask again 
 angal.telemetry.button.label.confirm                                                                   = Confirm
-angal.telemetry.confirmation.dialog.message                                                            = Are you sure that you want to send these information?
+angal.telemetry.confirmation.dialog.message                                                            = Are you sure that you want to send this information?
 angal.telemetry.info                                                                                   = Open Hospital is the first of a set of software products that Informatici Senza Frontiere has developed to support the information management and the activities of hospitals and health centers in the simplest manner possible, by providing tools for the hospital administrative operations (like registering patients, manage laboratory analysis and pharmaceutical stocks) and to produce detailed statistics and reports.
 angal.telemetry.title                                                                                  = Help us improve Open Hospital
 angal.therapy.actions                                                                                  = Actions
