OP-844 add DICOM button in Admission/Patient Browser

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -107,7 +107,7 @@ angal.admission.patientfolder.admission.txt                                     
 angal.admission.patientfolder.btn                                                                      = Clinical Sheet
 angal.admission.patientfolder.btn.key                                                                  = S
 angal.admission.patientfolder.dicom.btn                                                                = DICOM
-angal.admission.patientfolder.dicom.btn.key                                                            = D
+angal.admission.patientfolder.dicom.btn.key                                                            = I
 angal.admission.patientfolder.dischart.btn                                                             = Discharge Chart
 angal.admission.patientfolder.dischart.btn.key                                                         = S
 angal.admission.patientfolder.drugs.title                                                              = Drugs
