--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1566,6 +1566,7 @@ angal.ward.cannotdeletematernityward.msg                                        
 angal.ward.deleteward.fmt.msg                                                                          = Delete ward: {0}?
 angal.ward.doctors.col                                                                                 = Doctors
 angal.ward.doctorsedit                                                                                 = Number of doctors *
+angal.ward.duration.col                                                                                = Duration
 angal.ward.editward.title                                                                              = Edit Ward
 angal.ward.emailedit                                                                                   = E-mail
 angal.ward.femaleward                                                                                  = Female Ward
