--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -307,7 +307,6 @@ angal.common.pleaseinsertacode.msg                                              
 angal.common.pleaseinsertavaliddescription.msg                                                         = Please insert a valid description.
 angal.common.pleaseselectapatient.msg                                                                  = Please select a patient.
 angal.common.pleaseselectarow.msg                                                                      = Please select a row.
-angal.common.pleaseselectaward.msg                                                                     = Please select a ward
 angal.common.print.btn                                                                                 = Print
 angal.common.print.btn.key                                                                             = P
 angal.common.qty.txt                                                                                   = Qty
@@ -1112,6 +1111,7 @@ angal.opd.selectadisease.txt                                                    
 angal.opd.selectapatient.txt                                                                           = Select a Patient
 angal.opd.specifiedwardisnotenabledforopdservice.msg                                                   = Specified ward is not enabled for OPD Service.
 angal.opd.specifyingduplicatediseasesisnotallowed.msg                                                  = Specifying duplicate diseases is not allowed.
+angal.opd.ward.txt                                                                                     = Ward
 angal.operation.deleteoperation.fmt.msg                                                                = Delete operation: {0}?
 angal.operation.editoperation.title                                                                    = Edit Operation
 angal.operation.major                                                                                  = Major
@@ -1549,6 +1549,7 @@ angal.visit.nextarrow.btn.key                                                   
 angal.visit.pleasechooseadate.msg                                                                      = Please choose a date.
 angal.visit.pleasechooseapatient.msg                                                                   = Please choose a patient.
 angal.visit.pleasechooseaward.msg                                                                      = Please choose a ward.
+angal.visit.pleasechooseawardforthenextvisit.msg                                                       = Please choose a ward for the next visit.
 angal.visit.pleaseselectapatient.title                                                                 = Please Select a Patient
 angal.visit.printthisdaysvisits1.btn                                                                   = Print this day's visits (1)
 angal.visit.printthisdaysvisits1.btn.key                                                               = 1
@@ -1570,7 +1571,6 @@ angal.ward.cannotdeleteopdward.msg                                              
 angal.ward.deleteward.fmt.msg                                                                          = Delete ward: {0}?
 angal.ward.doctors.col                                                                                 = Doctors
 angal.ward.doctorsedit                                                                                 = Number of doctors *
-angal.ward.duration.col                                                                                = Duration
 angal.ward.editward.title                                                                              = Edit Ward
 angal.ward.emailedit                                                                                   = E-mail
 angal.ward.femaleward                                                                                  = Female Ward
@@ -1587,7 +1587,6 @@ angal.ward.newward.title                                                        
 angal.ward.nurses.col                                                                                  = Nurses
 angal.ward.nursesedit                                                                                  = Number of nurses *
 angal.ward.opd.txt                                                                                     = OPD
-angal.ward.opdwardmusthaveopdservicechecked.msg                                                        = OPD ward must have OPD service checked.
 angal.ward.pleasecheckinadmissionpatients.msg                                                          = Please check in admission / patients.
 angal.ward.requiredfields                                                                              = * Required fields
 angal.ward.theemailmustbevalid.msg                                                                     = The email must be valid.
@@ -1597,7 +1596,6 @@ angal.ward.thenumberofnursesmustbepositive.msg                                  
 angal.ward.theselectedwardhaspatients.fmt.msg                                                          = The selected ward has {0} patients.
 angal.ward.visitdurationedit                                                                           = Visit duration *
 angal.ward.wardbrowser.title                                                                           = Ward Browser
-angal.ward.wardwithopd                                                                                 = Ward with OPD service
 angal.ward.wardwithpharmacy                                                                            = Ward with pharmacy
 angal.wardpharmacy.lotduedate.col                                                                      = Lot Due Date
 angal.wardpharmacy.lotnumber.col                                                                       = Lot No.
