Move setVisitDuration into GUI

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1097,6 +1097,7 @@ angal.opd.operation                                                             
 angal.opd.patientcode.fmt.msg                                                                          = Patient (code: {0})
 angal.opd.patientid.col                                                                                = PAT. ID
 angal.opd.patientstatus.col                                                                            = Status
+angal.opd.pleasechooseawardforthenextvisit.msg                                                         = Please choose a ward for the next visit.
 angal.opd.pleaseinsertattendancedate.msg                                                               = Please insert an admittance date.
 angal.opd.pleaseinsertavalidattendancedate.msg                                                         = Please insert a valid admittance date.
 angal.opd.pleaseinsertthepatientsage.msg                                                               = Please insert the patient's age.
@@ -1549,7 +1550,6 @@ angal.visit.nextarrow.btn.key                                                   
 angal.visit.pleasechooseadate.msg                                                                      = Please choose a date.
 angal.visit.pleasechooseapatient.msg                                                                   = Please choose a patient.
 angal.visit.pleasechooseaward.msg                                                                      = Please choose a ward.
-angal.visit.pleasechooseawardforthenextvisit.msg                                                       = Please choose a ward for the next visit.
 angal.visit.pleaseselectapatient.title                                                                 = Please Select a Patient
 angal.visit.printthisdaysvisits1.btn                                                                   = Print this day's visits (1)
 angal.visit.printthisdaysvisits1.btn.key                                                               = 1
