Add ward column in OpdBrowser and fix some bundle
- missing ward in filter panel

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -307,6 +307,7 @@ angal.common.pleaseinsertacode.msg                                              
 angal.common.pleaseinsertavaliddescription.msg                                                         = Please insert a valid description.
 angal.common.pleaseselectapatient.msg                                                                  = Please select a patient.
 angal.common.pleaseselectarow.msg                                                                      = Please select a row.
+angal.common.pleaseselectaward.msg                                                                     = Please select a ward.
 angal.common.print.btn                                                                                 = Print
 angal.common.print.btn.key                                                                             = P
 angal.common.qty.txt                                                                                   = Qty
@@ -1596,6 +1597,7 @@ angal.ward.thenumberofnursesmustbepositive.msg                                  
 angal.ward.theselectedwardhaspatients.fmt.msg                                                          = The selected ward has {0} patients.
 angal.ward.visitdurationedit                                                                           = Visit duration *
 angal.ward.wardbrowser.title                                                                           = Ward Browser
+angal.ward.wardwithopd                                                                                 = Ward with OPD
 angal.ward.wardwithpharmacy                                                                            = Ward with pharmacy
 angal.wardpharmacy.lotduedate.col                                                                      = Lot Due Date
 angal.wardpharmacy.lotnumber.col                                                                       = Lot No.
