Add ward in filter panel

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1056,6 +1056,7 @@ angal.newbill.youcannotdeletealreadysaveditems.msg                              
 angal.newbill.youcannotdeletepastpayments.msg                                                          = You cannot delete past payments.
 angal.opd.agefrommustbelowerthanageto.msg                                                              = 'Age from' must be lower than 'Age to'.
 angal.opd.alldiseases.txt                                                                              = All Diseases
+angal.opd.allwards.txt                                                                                 = All Wards
 angal.opd.attendancedate.txt                                                                           = Admittance Date
 angal.opd.cannotsetadateinthepastfornextvisit.msg                                                      = You can not set a date in the past for the next visit.
 angal.opd.datefrommustbebefordateto.msg                                                                = 'Date from' must be earlier than 'Date to'.
@@ -1111,6 +1112,7 @@ angal.opd.referralto.txt                                                        
 angal.opd.secondname.txt                                                                               = Last Name
 angal.opd.selectadisease.txt                                                                           = Select a Disease
 angal.opd.selectapatient.txt                                                                           = Select a Patient
+angal.opd.selectaward.txt                                                                              = Select a Ward
 angal.opd.specifiedwardisnotenabledforopdservice.msg                                                   = Specified ward is not enabled for OPD Service.
 angal.opd.specifyingduplicatediseasesisnotallowed.msg                                                  = Specifying duplicate diseases is not allowed.
 angal.opd.ward.txt                                                                                     = Ward
